Aplicando estilos na seção mais lidas da semana

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <span class="content-tag">Realidade virtual</span>
                 <img src="assets/images/Image 08.png" alt="">
                 <p>
-                    Nova geração de consoles de videogame é lançada, trazendo gráficos ultra-realistas e experiên...
+                    Nova geração de consoles de videogame é lançada, trazendo gráficos ultra-realistas e experiênk
                 </p>
             </figure>
             <figure>
